src/test/ui/wf/wf-static-method.base.stderr
error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/wf-static-method.rs:21:9
   |
LL |         u
   |         ^
   |
note: ...the reference is valid for the lifetime `'a` as defined here...
  --> $DIR/wf-static-method.rs:18:6
   |
LL | impl<'a, 'b> Foo<'a, 'b, Evil<'a, 'b>> for () {
   |      ^^
note: ...but the borrowed content is only valid for the lifetime `'b` as defined here
  --> $DIR/wf-static-method.rs:18:10
   |
LL | impl<'a, 'b> Foo<'a, 'b, Evil<'a, 'b>> for () {
   |          ^^

error[E0478]: lifetime bound not satisfied
  --> $DIR/wf-static-method.rs:32:18
   |
LL |         let me = Self::make_me();
   |                  ^^^^
   |
note: lifetime parameter instantiated with the lifetime `'b` as defined here
  --> $DIR/wf-static-method.rs:29:10
   |
LL | impl<'a, 'b> Foo<'a, 'b, ()> for IndirectEvil<'a, 'b> {
   |          ^^
note: but lifetime parameter must outlive the lifetime `'a` as defined here
  --> $DIR/wf-static-method.rs:29:6
   |
LL | impl<'a, 'b> Foo<'a, 'b, ()> for IndirectEvil<'a, 'b> {
   |      ^^

error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/wf-static-method.rs:41:9
   |
LL |         u
   |         ^
   |
note: ...the reference is valid for the lifetime `'a` as defined here...
  --> $DIR/wf-static-method.rs:39:6
   |
LL | impl<'a, 'b> Evil<'a, 'b> {
   |      ^^
note: ...but the borrowed content is only valid for the lifetime `'b` as defined here
  --> $DIR/wf-static-method.rs:39:10
   |
LL | impl<'a, 'b> Evil<'a, 'b> {
   |          ^^

error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'b` due to conflicting requirements
  --> $DIR/wf-static-method.rs:51:5
   |
LL |     <()>::static_evil(b)
   |     ^^^^^^^^^^^^^^^^^
   |
note: first, the lifetime cannot outlive the lifetime `'b` as defined here...
  --> $DIR/wf-static-method.rs:50:13
   |
LL | fn evil<'a, 'b>(b: &'b u32) -> &'a u32 {
   |             ^^
note: ...so that reference does not outlive borrowed content
  --> $DIR/wf-static-method.rs:51:23
   |
LL |     <()>::static_evil(b)
   |                       ^
note: but, the lifetime must be valid for the lifetime `'a` as defined here...
  --> $DIR/wf-static-method.rs:50:9
   |
LL | fn evil<'a, 'b>(b: &'b u32) -> &'a u32 {
   |         ^^
note: ...so that reference does not outlive borrowed content
  --> $DIR/wf-static-method.rs:51:5
   |
LL |     <()>::static_evil(b)
   |     ^^^^^^^^^^^^^^^^^^^^

error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'b` due to conflicting requirements
  --> $DIR/wf-static-method.rs:57:5
   |
LL |     <IndirectEvil>::static_evil(b)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: first, the lifetime cannot outlive the lifetime `'b` as defined here...
  --> $DIR/wf-static-method.rs:56:22
   |
LL | fn indirect_evil<'a, 'b>(b: &'b u32) -> &'a u32 {
   |                      ^^
note: ...so that reference does not outlive borrowed content
  --> $DIR/wf-static-method.rs:57:33
   |
LL |     <IndirectEvil>::static_evil(b)
   |                                 ^
note: but, the lifetime must be valid for the lifetime `'a` as defined here...
  --> $DIR/wf-static-method.rs:56:18
   |
LL | fn indirect_evil<'a, 'b>(b: &'b u32) -> &'a u32 {
   |                  ^^
note: ...so that reference does not outlive borrowed content
  --> $DIR/wf-static-method.rs:57:5
   |
LL |     <IndirectEvil>::static_evil(b)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'b` due to conflicting requirements
  --> $DIR/wf-static-method.rs:63:5
   |
LL |     <Evil>::inherent_evil(b)
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
note: first, the lifetime cannot outlive the lifetime `'b` as defined here...
  --> $DIR/wf-static-method.rs:62:22
   |
LL | fn inherent_evil<'a, 'b>(b: &'b u32) -> &'a u32 {
   |                      ^^
note: ...so that reference does not outlive borrowed content
  --> $DIR/wf-static-method.rs:63:27
   |
LL |     <Evil>::inherent_evil(b)
   |                           ^
note: but, the lifetime must be valid for the lifetime `'a` as defined here...
  --> $DIR/wf-static-method.rs:62:18
   |
LL | fn inherent_evil<'a, 'b>(b: &'b u32) -> &'a u32 {
   |                  ^^
note: ...so that reference does not outlive borrowed content
  --> $DIR/wf-static-method.rs:63:5
   |
LL |     <Evil>::inherent_evil(b)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0312, E0478, E0495.
For more information about an error, try `rustc --explain E0312`.
